fix cargo item misaligned

--- a/components/pages/shop/cargo/cargo.module.scss
+++ b/components/pages/shop/cargo/cargo.module.scss
@@ -81,6 +81,11 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
+      width: 225px;
+
+      @media only screen and (max-width: 576px) {
+        width: 100px;
+      }
 
       .guideText {
         font-style: italic;
@@ -112,6 +117,11 @@
       @media only screen and (max-width: 576px) {
         font-size: 12px;
       }
+    }
+
+    .itemPrice {
+      @extend .itemText;
+      width: 50px;
     }
   } 
 
@@ -258,7 +268,7 @@
         background-color: $primary-navy;
         cursor: pointer;
 
-        font-weight: 700;
+        font-weight: 400;
         font-size: 14px;
         color: $primary-beige;
         transition: all 400ms;
